<resources>
    <string name="app_name">M Cake</string>
    <string name="app_default_name">M Cake</string>
    <string name="login">登入</string>
    <string name="register">| 註冊</string>
    <string name="user_welcome_info">今天想來點手工蛋糕，預定起來！</string>
    <string name="user_welcome">親愛的顧客您好。</string>
    <string name="product_list">產品清單</string>
    <string name="memeber_center">會員中心</string>
    <string name="search_order">訂單查詢</string>
    <string name="shopping_cart">購物車</string>
    <string name="contact_us">聯絡我們</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_register">註冊帳號</string>
    <string name="name">姓名：</string>
    <string name="sex">性別：</string>
    <string name="phone">電話：</string>
    <string name="address">地址：</string>
    <string name="email">Email：</string>
    <string name="password">密碼：</string>
    <string name="password_confirm">確認密碼：</string>
    <string name="enter_name">輸入姓名</string>
    <string name="enter_phone">輸入電話</string>
    <string name="enter_address">輸入地址</string>
    <string name="enter_email">輸入Email</string>
    <string name="enter_password">輸入密碼(最多16個字元)</string>
    <string name="enter_password_confirm">請再輸入一次</string>
    <string name="sex_default">男</string>
    <string name="select_sex">選擇</string>
    <string name="man">男</string>
    <string name="girl">女</string>
    <string name="name_error">請輸入姓名</string>
    <string name="phone_error">請檢查電話</string>
    <string name="email_error">請檢查Email</string>
    <string name="address_error">請檢查地址</string>
    <string name="password_error">請檢查密碼</string>
    <string name="password_not_the_same">密碼不一緻，請確認。</string>
    <string name="creating">創建中</string>
    <string name="fail_to_create_data">創建資料失敗。</string>
    <string name="create_data_successful">歡迎加入我們的會員。</string>
    <string name="welcome_back">歡迎回來。</string>
    <string name="login_error">登入錯誤，請稍後再試。</string>
    <string name="fail_to_get_user_list">拿不到使用者資料</string>
    <string name="already_has_same_email">已經有重複的Email了。</string>
    <string name="user_gmail_login">使用 GMAIL 登入</string>
    <string name="or">或</string>
    <string name="account">帳號：</string>
    <string name="logining">登入中</string>
    <string name="login_success">登入成功</string>
    <string name="complete_user_data">新增資料</string>
    <string name="complete_register">完成你的註冊</string>
    <string name="comment">留下評論</string>
    <string name="account_error">請輸入帳號</string>
    <string name="account_does_not_exist">帳號不存在，請重新再試。</string>
    <string name="email_not_right">Email格式不正確。</string>
    <string name="write_comment">寫下評論</string>
    <string name="photo_title">照片</string>
    <string name="add_photo">想放上產品照片嗎？</string>
    <string name="write_something">寫點什麼吧～</string>
    <string name="finish">完成</string>
    <string name="comment_empty">講點什麼吧，謝謝</string>
    <string name="upload_fail">上傳失敗</string>
    <string name="get_photo_url_fail">取得網址失敗，請稍後再試。</string>
    <string name="fail_to_get_photo_url">無法取得照片網址，請稍後再試。</string>
    <string name="title_upload_photo">上傳中，請稍候</string>
    <string name="fail_to_get_comment_list">拿不到評論資料</string>
    <string name="re_select_photo">重選</string>
    <string name="fail_to_get_product_list">無法取得商品列表</string>
    <string name="please_login_or_register">請登入或註冊後完成你的操作。</string>
    <string name="reservse">預定</string>
    <string name="product_name">產品名稱</string>
    <string name="reservse_attention">注意事項：目前僅供 "基隆地區" 配送及預訂，敬請見諒。</string>
    <string name="product_description">產品說明</string>
    <string name="product_material">原料</string>
    <string name="product_working_main_day">製作天數</string>
    <string name="my_favorite">我的最愛</string>
    <string name="remove">移除</string>
    <string name="total">總計：</string>
    <string name="check_out">結帳</string>
    <string name="cart_no_data">購物車裡沒有任何東西，快點加緊選購吧～＊</string>
</resources>