<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/page_background"
    tools:context=".view.product.ProductFragment">


    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_google"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/login_or"
        android:textSize="@dimen/small_text_size_16sp"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/grey"
        android:text="@string/or"
        app:layout_constraintTop_toBottomOf="@id/login_google"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <TextView
        android:id="@+id/login_account"
        android:textColor="@color/text_default_color"
        android:textSize="@dimen/small_text_size_14sp"
        android:text="@string/account"
        app:layout_constraintTop_toBottomOf="@id/login_or"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-thin"
        app:layout_constraintLeft_toLeftOf="@id/login_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/login_edit_account"
        android:hint="@string/enter_email"
        app:layout_constraintTop_toTopOf="@id/login_account"
        app:layout_constraintBottom_toBottomOf="@id/login_account"
        app:layout_constraintLeft_toRightOf="@id/login_account"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/app_main_color"
        app:layout_constraintRight_toRightOf="@id/login_google"
        android:textSize="@dimen/small_text_size_14sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/login_password"
        android:textColor="@color/text_default_color"
        android:textSize="@dimen/small_text_size_14sp"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/login_account"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-thin"
        app:layout_constraintLeft_toLeftOf="@id/login_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/login_edit_password"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="@id/login_password"
        app:layout_constraintBottom_toBottomOf="@id/login_password"
        app:layout_constraintLeft_toRightOf="@id/login_password"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/app_main_color"
        app:layout_constraintRight_toRightOf="@id/login_google"
        android:textSize="@dimen/small_text_size_14sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/login_btn"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size_16sp"
        android:fontFamily="sans-serif-thin"
        app:layout_constraintTop_toBottomOf="@id/login_edit_password"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="@id/login_google"
        app:layout_constraintRight_toRightOf="@id/login_google"
        android:background="@drawable/btn_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/login_btn_register"
        android:text="@string/title_register"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size_16sp"
        android:visibility="gone"
        android:fontFamily="sans-serif-thin"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@id/login_google"
        app:layout_constraintRight_toRightOf="@id/login_google"
        android:background="@drawable/btn_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>