<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/sex_background_shape"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/sign_in_dialog_title"
        android:text="@string/app_default_name"
        android:textSize="@dimen/small_text_size_25sp"
        android:textColor="@color/app_main_color"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/sign_in_dialog_line"
        app:layout_constraintTop_toBottomOf="@id/sign_in_dialog_title"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/sign_in_dialog_content"
        android:text="@string/please_login_or_register"
        android:textSize="@dimen/small_text_size_16sp"
        android:textColor="@color/text_default_color"
        app:layout_constraintTop_toBottomOf="@id/sign_in_dialog_line"
        android:padding="16dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="120dp"/>



    <TextView
        android:id="@+id/sign_in_dialog_sign_in"
        android:text="@string/login"
        android:textColor="@color/text_default_color"
        android:textSize="@dimen/small_text_size_20sp"
        app:layout_constraintTop_toBottomOf="@id/sign_in_dialog_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/sign_in_dialog_register"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/sign_in_dialog_register"
        android:text="@string/title_register"
        android:textColor="@color/text_default_color"
        android:textSize="@dimen/small_text_size_20sp"
        app:layout_constraintTop_toBottomOf="@id/sign_in_dialog_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/sign_in_dialog_sign_in"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/sign_in_dialog_line_1"
        app:layout_constraintTop_toTopOf="@id/sign_in_dialog_sign_in"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <View
        android:id="@+id/sign_in_dialog_line_2"
        app:layout_constraintTop_toTopOf="@id/sign_in_dialog_sign_in"
        app:layout_constraintBottom_toBottomOf="@id/sign_in_dialog_sign_in"
        app:layout_constraintLeft_toRightOf="@id/sign_in_dialog_sign_in"
        android:background="@color/white"
        android:layout_width="1dp"
        android:layout_height="0dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>
