<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background"
    tools:context=".view.home.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_action_bar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/home_action_bar_menu"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="16dp"
                android:contentDescription="@null"
                android:src="@drawable/menu"
                android:layout_width="@dimen/menu_icon_size"
                android:layout_height="@dimen/menu_icon_size"/>


            <TextView
                android:id="@+id/home_action_bar_title"
                android:text="@string/app_default_name"
                android:textSize="@dimen/action_bar_title_size"
                android:textColor="@color/app_main_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:background="@color/under_line_color"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/home_action_bar_under_line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <ImageView
                android:id="@+id/home_action_bar_cart"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@null"
                android:src="@drawable/cart"
                android:layout_width="@dimen/cart_icon_size"
                android:layout_height="@dimen/cart_icon_size"/>

            <TextView
                android:id="@+id/home_action_bar_count"
                android:textSize="6sp"
                android:text="1"
                android:gravity="center"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="@id/home_action_bar_cart"
                app:layout_constraintRight_toRightOf="@id/home_action_bar_cart"
                android:background="@drawable/shopping_count"
                android:layout_width="10dp"
                android:layout_height="10dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/home_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_action_bar"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/home_navigation_view"
        android:layout_gravity="start"
        android:layout_width="@dimen/navigation_view_width"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/navigation_header"
                android:background="@color/page_background"
                android:layout_width="match_parent"
                android:layout_height="150dp"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/navigation_header_user_photo"
                app:layout_constraintTop_toTopOf="@id/navigation_header"
                app:layout_constraintLeft_toLeftOf="@id/navigation_header"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/user"
                android:layout_width="@dimen/user_icon_width"
                android:layout_height="@dimen/user_icon_height"/>

            <TextView
                android:id="@+id/navigation_header_login"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:fontFamily="sans-serif-thin"
                app:layout_constraintRight_toLeftOf="@id/navigation_header_register"
                android:textColor="@color/text_default_color"
                android:textSize="@dimen/small_text_size_12sp"
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/navigation_header_register"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-thin"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="16dp"
                android:textColor="@color/text_default_color"
                android:textSize="@dimen/small_text_size_12sp"
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/navigation_header_name"
                android:textSize="@dimen/small_text_size_14sp"
                android:textColor="@color/text_default_color"
                android:fontFamily="sans-serif-thin"
                android:text="@string/user_welcome"
                app:layout_constraintTop_toBottomOf="@id/navigation_header_user_photo"
                app:layout_constraintLeft_toLeftOf="@id/navigation_header_user_photo"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/navigation_header_description"
                android:textSize="@dimen/small_text_size_14sp"
                android:textColor="@color/text_default_color"
                android:fontFamily="sans-serif-thin"
                android:text="@string/user_welcome_info"
                app:layout_constraintTop_toBottomOf="@id/navigation_header_name"
                app:layout_constraintLeft_toLeftOf="@id/navigation_header_name"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="15dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/navigation_header_recycler_view"
                app:layout_constraintTop_toBottomOf="@id/navigation_header"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>